<resources>
    <string name="app_name">easySpa</string>
    <string name="facebook_app_id">861472953939142</string>
    <string name="google_client_id">726054881005-hl6tnt0nmlfvafat29t3fepu7cr8hgak.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Menu aberto</string>
    <string name="navigation_drawer_close">Fechar menu</string>

    <!-- Login -->
    <string name="login_with_facebook">Entrar com o Facebook</string>
    <string name="login_with_google">Entrar com o Google</string>
    <!-- -->

    <!-- Menu -->
    <string name="menu_toyou_title">Para você</string>
    <string name="menu_1">Quero me embelezar</string>
    <string name="menu_2">Conversas</string>
    <string name="menu_3">Agenda</string>
    <string name="menu_4">Histórico</string>

    <string name="menu_others_title">Outros</string>
    <string name="menu_5">Configurações</string>
    <string name="menu_6">Sair</string>
    <!-- -->

    <!-- Texto dos botões da home -->
    <string name="home_icon_1">Pés e mãos</string>
    <string name="home_icon_2">Cabeleireiro</string>
    <string name="home_icon_3">Depilação</string>
    <string name="home_icon_4">Sobrancelha</string>
    <string name="home_icon_5">Maquiagem</string>
    <string name="home_icon_6">Estética corporal</string>
    <string name="home_icon_7">Estética facial</string>
    <string name="home_icon_8">Mais categorias</string>
    <!-- -->

    <!-- Mensagens de confirmação -->
    <string name="msg_confirm_exit_title">Sair</string>
    <string name="msg_confirm_exit_message">Tem certeza que deseja sair?</string>
    <!-- -->

    <!-- Categorias -->
    <string name="categoria_1">Pés e mãos</string>
    <string name="categoria_2">Academias</string>
    <string name="categoria_3">Acupuntura</string>
    <string name="categoria_4">Cabeleireiro</string>
    <string name="categoria_5">Cílios</string>
    <string name="categoria_6">Clínica estética</string>
    <string name="categoria_7">Dentista</string>
    <string name="categoria_8">Depilação</string>
    <string name="categoria_9">Design de sobrancelha</string>
    <string name="categoria_10">Estética corporal</string>
    <string name="categoria_11">Estética facial</string>
    <string name="categoria_12">Fisioterapia</string>
    <string name="categoria_13">Hidroterapia</string>
    <string name="categoria_14">Maquiagem</string>
    <string name="categoria_15">Massagem</string>
    <string name="categoria_16">Nutricionista</string>
    <string name="categoria_17">Personal trainer</string>
    <string name="categoria_18">Piercing</string>
    <string name="categoria_19">Praticas integrativas</string>
    <string name="categoria_20">Salão de beleza</string>
    <string name="categoria_21">Spa</string>
    <string name="categoria_22">Yoga</string>
    <!-- -->

    <!-- Títulos -->
    <string name="title_main">easySpa</string>
    <string name="title_categorias">Todas as categorias</string>
    <!-- -->

    <!-- Localização -->
    <string name="locationDialogTitle">Localização</string>
    <string name="locationDialogMessage">É necessário ativar a localização para continuar, deseja ativar agora?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
