<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.riotech.easyspa.fragments.InicioFragment">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!-- Anúncio -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/anuncio1" />
            </LinearLayout>
            <!-- / Anúncio 1 -->

            <!-- Grid de opções de beleza -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/main_section1_background"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <!-- Pés e mãos / cabeleireiro -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/pes_e_maos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:drawableTop="@drawable/ic_pesemaos"
                        android:text="@string/home_icon_1"
                        android:background="@color/main_button_section1_background"
                        android:padding="10dp"
                        android:layout_marginRight="5dp"
                        android:textSize="11sp" />

                    <Button
                        android:id="@+id/cabeleireiro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:drawableTop="@drawable/ic_cabeleireiro"
                        android:text="@string/home_icon_2"
                        android:background="@color/main_button_section1_background"
                        android:padding="10dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="11sp"/>
                </LinearLayout>
                <!-- /Pés e mãos / cabeleireiro -->


                <!-- Depilação / Sombrancelha -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/depilacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:drawableTop="@drawable/ic_depilacao"
                        android:text="@string/home_icon_3"
                        android:background="@color/main_button_section1_background"
                        android:padding="10dp"
                        android:layout_marginRight="5dp"
                        android:textSize="11sp"/>

                    <Button
                        android:id="@+id/sombrancelha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:drawableTop="@drawable/ic_sombrancelha"
                        android:text="@string/home_icon_4"
                        android:background="@color/main_button_section1_background"
                        android:padding="10dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="11sp"/>
                </LinearLayout>
                <!-- /Depilação / Sombrancelha -->

                <!-- Maquiagem / Estética corporal -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/maquiagem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:drawableTop="@drawable/ic_maquiagem"
                        android:text="@string/home_icon_5"
                        android:background="@color/main_button_section1_background"
                        android:padding="10dp"
                        android:layout_marginRight="5dp"
                        android:textSize="11sp"/>

                    <Button
                        android:id="@+id/estetica_corporal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:drawableTop="@drawable/ic_esteticacorporal"
                        android:text="@string/home_icon_6"
                        android:background="@color/main_button_section1_background"
                        android:padding="10dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="11sp"/>
                </LinearLayout>
                <!-- /Maquiagem / Estética corporal -->

                <!-- Maquiagem / Estética corporal -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/estetica_facial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:drawableTop="@drawable/ic_esteticafacial"
                        android:text="@string/home_icon_7"
                        android:background="@color/main_button_section1_background"
                        android:padding="10dp"
                        android:layout_marginRight="5dp"
                        android:textSize="11sp"/>

                    <Button
                        android:id="@+id/mais_categorias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:drawableTop="@drawable/ic_maiscategorias"
                        android:text="@string/home_icon_8"
                        android:background="@color/main_button_section1_background"
                        android:padding="10dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="11sp"/>
                </LinearLayout>
                <!-- /Maquiagem / Estética corporal -->

            </LinearLayout>
            <!-- /Grid de opções de beleza -->

            <!-- Anúncios -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/main_section2_background"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/anuncio2"
                        android:adjustViewBounds="true"
                        android:elevation="0dp"
                        android:layout_marginRight="5dp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/anuncio3"
                        android:layout_marginLeft="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/anuncio4"
                        android:layout_marginRight="5dp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/anuncio5"
                        android:layout_marginLeft="5dp" />
                </LinearLayout>

            </LinearLayout>
            <!-- /Anúncios -->

        </LinearLayout>
    </ScrollView>

</FrameLayout>
